tests/e2e/string_templates_path_error5.story
b = [1, 2]
c = "{ 3 + b }"
